
AUTOMAKE_OPTIONS = gnu

pkginclude_HEADERS = basicentry.h             filepath.h               \
                     collcoll.h               inflateinputstreambuf.h  \
                     dircoll.h                simplesmartptr.h         \
                     fcoll.h                  zipfile.h                \
                     ziphead.h                zipheadio.h              \
                     fcollexceptions.h        zipinputstream.h         \
                     fileentry.h              zipinputstreambuf.h      \
                     filterinputstreambuf.h   virtualseeker.h          \
                     meta-iostreams.h         zipios-config.h          \
                     filteroutputstreambuf.h  deflateoutputstreambuf.h \
                     zipoutputstreambuf.h     zipoutputstream.h

